--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "hexo-renderer-marked": "^0.3.2",
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.1",
-    "hexo-wordcount": "^6.0.1",
-    "hexo-blog-encrypt": "1.1.*"
+    "hexo-wordcount": "^6.0.1"
   }
 }
